--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -141,10 +141,5 @@
   "advice_continuous": "Continuous Advice",
   "advice_continuous_desc": "We accompany you every step towards a more sustainable bakery.",
   "recognition": "Green Recognition",
-  "recognition_desc": "Stand out as a leader in sustainability in the bakery sector.",
-  "innovation": "Innovation",
-  "transformation": "Transformation",
-  "material_supply": "Material Supply",
-  "project_management": "Project Management",
-  "heating_water": "Heating and Water"
+  "recognition_desc": "Stand out as a leader in sustainability in the bakery sector."
 }
