--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -141,10 +141,5 @@
   "advice_continuous": "Asesoramiento continuo",
   "advice_continuous_desc": "Te acompañamos en cada paso hacia una panadería más sostenible.",
   "recognition": "Reconocimiento verde",
-  "recognition_desc": "Destaca como líder en sostenibilidad en el sector panadero.",
-  "innovation": "Innovación",
-  "transformation": "Transformación",
-  "material_supply": "Suministro de materiales",
-  "project_management": "Gestión de proyectos",
-  "heating_water": "Calefacción y agua"
+  "recognition_desc": "Destaca como líder en sostenibilidad en el sector panadero."
 }
